--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Landing Page Title</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div class="wrapper">
+      <header>
+        <nav>
+          <a href="#">Logo</a>
+          <ul>
+            <li><a href="#">nav link 1</a></li>
+            <li><a href="#">nav link 2</a></li>
+            <li><a href="#">nav link 3</a></li>
+            <li><a href="#">nav link 4</a></li>
+            <li><a href="#">nav link 5</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <h1>Hello World</h1>
+      </main>
+
+      <footer>footer</footer>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
