--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <footer>footer</footer>
 
+      <script src="scripts/prefixer.min.js"></script>
       <script src="scripts/main.js"></script>
     </div>
   </body>
