--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="no olvidarse de completar" />
+    <meta name="keywords" content="no olvidarse de completar" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Landing Page Title</title>
+    <title>Boilerplate</title>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <nav>
-          <a href="#">Logo</a>
-          <ul>
-            <li><a href="#">nav link 1</a></li>
-            <li><a href="#">nav link 2</a></li>
-            <li><a href="#">nav link 3</a></li>
-            <li><a href="#">nav link 4</a></li>
-            <li><a href="#">nav link 5</a></li>
-          </ul>
-        </nav>
-      </header>
+    
+    <header>
+      <nav>
+        <a href="#">Logo</a>
+        <ul>
+          <li><a href="#">nav link 1</a></li>
+          <li><a href="#">nav link 2</a></li>
+          <li><a href="#">nav link 3</a></li>
+          <li><a href="#">nav link 4</a></li>
+          <li><a href="#">nav link 5</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <main>
-        <h1>Hello World</h1>
-      </main>
+    <main>
+      <h1>Hello World</h1>
+    </main>
 
-      <footer>footer</footer>
+    <footer>footer</footer>
 
-      <script src="scripts/prefixer.min.js"></script>
-      <script src="scripts/main.js"></script>
-    </div>
+    <script src="scripts/prefixer.min.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
