--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Boilerplate</title>
   </head>
   <body>
-    
     <header>
       <nav>
         <a href="#">Logo</a>
@@ -21,13 +20,24 @@
           <li><a href="#">nav link 5</a></li>
         </ul>
       </nav>
+      <div class="hero">
+        <img class="hero_rocks" src="assets/rocks.png" alt="rocks" />
+        <img class="hero_planet" src="assets/planet 1.png" alt="planet" />
+        <img class="hero_bg" src="assets/bg.png" alt="background space" />
+        <div class="hero_filter"></div>
+        <div class="hero_text">
+          <h1>Título del sitio</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+            nostrum illo incidunt minus, velit ipsa deserunt minima
+          </p>
+        </div>
+      </div>
     </header>
 
-    <main>
-      <h1>Hello World</h1>
-    </main>
+    <main></main>
 
-    <footer>footer</footer>
+    <footer></footer>
 
     <script src="scripts/prefixer.min.js"></script>
     <script src="scripts/main.js"></script>
