maquetado general simple y navbar animation

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <body>
     <header>
       <nav>
-        <a href="#">Logo</a>
+        <a class="nav_logo" href="#">Boilerplate</a>
         <ul>
-          <li><a href="#">nav link 1</a></li>
-          <li><a href="#">nav link 2</a></li>
-          <li><a href="#">nav link 3</a></li>
-          <li><a href="#">nav link 4</a></li>
-          <li><a href="#">nav link 5</a></li>
+          <li><a class="nav_link_active" href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a class="nav_button" href="#">Button</a></li>
         </ul>
       </nav>
       <div class="hero">
@@ -28,16 +26,148 @@
         <div class="hero_text">
           <h1>Título del sitio</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-            nostrum illo incidunt minus, velit ipsa deserunt minima
+            Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
+            sin itur decen otalisLorem
           </p>
+          <a class="hero_button" href="#">Button</a>
         </div>
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="section_products">
+        <article class="product">
+          <div class="product_icon_cont">
+            <img
+              class="product_icon"
+              src="assets/icons/cart.png"
+              alt="cart icon"
+            />
+          </div>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
+            sin itur decen
+          </p>
+        </article>
 
-    <footer></footer>
+        <div class="product_separator"></div>
+
+        <article class="product">
+          <div class="product_icon_cont">
+            <img
+              class="product_icon"
+              src="assets/icons/graph.png"
+              alt="graph icon"
+            />
+          </div>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
+            sin itur decen
+          </p>
+        </article>
+
+        <div class="product_separator"></div>
+
+        <article class="product">
+          <div class="product_icon_cont">
+            <img
+              class="product_icon"
+              src="assets/icons/light.png"
+              alt="light icon"
+            />
+          </div>
+          <h3>Lorem ipsum</h3>
+          <p>
+            Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
+            sin itur decen
+          </p>
+        </article>
+      </section>
+
+      <section class="section_cards">
+        <h2>
+          Lorem ipsum dolar amat segueli<br />
+          sin acuarium non ballenus
+        </h2>
+        <div class="cards_container">
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+          <article class="card">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
+              con.
+            </p>
+            <a href="#"
+              ><img src="assets/icons/arrow.png" alt="arrow icon"
+            /></a>
+          </article>
+        </div>
+      </section>
+
+      <section class="section_call_to_action">
+        <h2>Lorem ipsum</h2>
+        <p>
+          Lorem ipsum dolar amat segueli sin acuarium non ballenus Lorem ipsum
+          dolar amat segueli sin acuarium non ballenus
+        </p>
+        <a href="#">Ver más</a>
+      </section>
+    </main>
+
+    <footer>
+      <p>@Copyright 2024</p>
+    </footer>
 
     <script src="scripts/prefixer.min.js"></script>
     <script src="scripts/main.js"></script>
