section de cellphone

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
         <div class="product_separator"></div>
 
-        <article class="product">
+        <article class="product product_active">
           <div class="product_icon_cont">
             <img
               class="product_icon"
-              src="assets/icons/graph.png"
+              src="assets/icons/graph_colored.png"
               alt="graph icon"
             />
           </div>
@@ -83,6 +83,21 @@
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
             sin itur decen
           </p>
+        </article>
+      </section>
+
+      <section class="section_cellphone">
+        <img src="assets/cellphones.png" alt="iphone" />
+        <div class="cellphone_separator"></div>
+        <article class="cellphone_text">
+          <h2>Lorem ipsum</h2>
+          <ul>
+            <li>List item 1</li>
+            <li>List item 2</li>
+            <li>List item 3</li>
+            <li>List item 4</li>
+          </ul>
+          <a href="#">Button</a>
         </article>
       </section>
 
