--- a/index.html
+++ b/index.html
@@ -1,49 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="no olvidarse de completar" />
-    <meta name="keywords" content="no olvidarse de completar" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="no olvidarse de completar" >
+    <meta name="keywords" content="no olvidarse de completar" >
+    <!-- Fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/a3cedbb514.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/styles.css" >
+    <!-- Title -->
     <title>Boilerplate</title>
   </head>
   <body>
+    <!-- Heading section -->
     <header>
+      <!-- navbar -->
       <nav>
+        <!-- logo -->
         <a class="nav_logo" href="#">Boilerplate</a>
+        <!-- Navigation links -->
         <ul>
           <li><a class="nav_link_active" href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a class="nav_button" href="#">Button</a></li>
         </ul>
       </nav>
+      <!-- Hero image container -->
       <div class="hero">
-        <img class="hero_rocks" src="assets/rocks.png" alt="rocks" />
-        <img class="hero_planet" src="assets/planet 1.png" alt="planet" />
-        <img class="hero_bg" src="assets/bg.png" alt="background space" />
+        <img class="hero_rocks" src="assets/rocks.png" alt="rocks" >
+        <img class="hero_planet" src="assets/planet.png" alt="planet" >
+        <img class="hero_bg" src="assets/bg.png" alt="background space" >
         <div class="hero_filter"></div>
+        <!-- Main title and description -->
         <div class="hero_text">
           <h1>Título del sitio</h1>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
             sin itur decen otalisLorem
           </p>
+          <!-- Hero main CTA -->
           <a class="hero_button" href="#">Button</a>
         </div>
       </div>
     </header>
 
+    <!-- Site content -->
     <main>
-      <section class="section_products">
+      <!-- Icons cards section -->
+      <div class="section_products">
+        <!-- First card -->
         <article class="product">
+          <!-- Animated wheel -->
           <div class="product_icon_cont">
-            <img
-              class="product_icon"
-              src="assets/icons/cart.png"
-              alt="cart icon"
-            />
+            <i class="fa-solid fa-lightbulb"></i>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              width="160px"
+              height="160px"
+              class="circle-svg"
+            >
+              <defs>
+                <linearGradient>
+                  <stop offset="0%" stop-color="#ff0032" />
+                  <stop offset="100%" stop-color="#ff8c00" />
+                </linearGradient>
+              </defs>
+
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle1"
+              />
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle2"
+              />
+            </svg>
           </div>
+
           <h3>Lorem ipsum</h3>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
@@ -53,14 +97,42 @@
 
         <div class="product_separator"></div>
 
-        <article class="product product_active">
+        <!-- Second card -->
+        <article class="product">
+          <!-- Animated wheel -->
           <div class="product_icon_cont">
-            <img
-              class="product_icon"
-              src="assets/icons/graph_colored.png"
-              alt="graph icon"
-            />
+            <i class="fa-solid fa-chart-simple"></i>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              width="160px"
+              height="160px"
+              class="circle-svg"
+            >
+              <defs>
+                <linearGradient>
+                  <stop offset="0%" stop-color="#ff0032" />
+                  <stop offset="100%" stop-color="#ff8c00" />
+                </linearGradient>
+              </defs>
+
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle1"
+              />
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle2"
+              />
+            </svg>
           </div>
+
           <h3>Lorem ipsum</h3>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
@@ -70,120 +142,137 @@
 
         <div class="product_separator"></div>
 
+        <!-- Third card -->
         <article class="product">
+          <!-- Animated wheel -->
           <div class="product_icon_cont">
-            <img
-              class="product_icon"
-              src="assets/icons/light.png"
-              alt="light icon"
-            />
+            <i class="fa-solid fa-lightbulb"></i>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              width="160px"
+              height="160px"
+              class="circle-svg"
+            >
+              <defs>
+                <linearGradient>
+                  <stop offset="0%" stop-color="#ff0032" />
+                  <stop offset="100%" stop-color="#ff8c00" />
+                </linearGradient>
+              </defs>
+
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle1"
+              />
+              <circle
+                cx="80"
+                cy="80"
+                r="70"
+                stroke-linecap="round"
+                class="circle2"
+              />
+            </svg>
           </div>
+
           <h3>Lorem ipsum</h3>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
             sin itur decen
           </p>
         </article>
-      </section>
+      </div>
 
-      <section class="section_cellphone">
-        <img src="assets/cellphones.png" alt="iphone" />
-        <div class="cellphone_separator"></div>
-        <article class="cellphone_text">
-          <h2>Lorem ipsum</h2>
-          <ul>
-            <li>List item 1</li>
-            <li>List item 2</li>
-            <li>List item 3</li>
-            <li>List item 4</li>
-          </ul>
-          <a href="#">Button</a>
-        </article>
-      </section>
-
+      <!-- Content cards sections -->
       <section class="section_cards">
+        <!-- Section title -->
         <h2>
-          Lorem ipsum dolar amat segueli<br />
+          Lorem ipsum dolar amat segueli<br >
           sin acuarium non ballenus
         </h2>
+
+        <!-- Content cards main container -->
         <div class="cards_container">
+          <!-- card - 1 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
+          <!-- card - 2 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
+          <!-- card - 3 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
+          <!-- card - 4 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
+          <!-- card - 5 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
+          <!-- card - 6 -->
           <article class="card">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><img src="assets/icons/arrow.png" alt="arrow icon"
-            /></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
         </div>
       </section>
 
+      <!-- Last content CTA -->
       <section class="section_call_to_action">
+        <!-- Title -->
         <h2>Lorem ipsum</h2>
+        <!-- Description -->
         <p>
           Lorem ipsum dolar amat segueli sin acuarium non ballenus Lorem ipsum
           dolar amat segueli sin acuarium non ballenus
         </p>
+        <!-- CTA button -->
         <a href="#">Ver más</a>
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <p>@Copyright 2024</p>
     </footer>
 
+    <!-- Scripts and prefixer -->
     <script src="scripts/prefixer.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
