--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="hero">
         <img class="hero_rocks" src="assets/rocks.png" alt="rocks" />
         <img class="hero_planet" src="assets/planet.png" alt="planet" />
-        <img class="hero_bg" src="assets/bg.png" alt="background space" />
+        <img class="hero_bg " src="assets/bg.png" alt="background space" />
         <div class="hero_filter"></div>
         <!-- Main title and description -->
         <div class="hero_text">
@@ -53,7 +53,7 @@
       <!-- Icons cards section -->
       <div class="section_products">
         <!-- First card -->
-        <article class="product">
+        <article class="product js_scroll .fade-in">
           <!-- Animated wheel -->
           <div class="product_icon_cont">
             <i class="fa-solid fa-lightbulb"></i>
@@ -187,7 +187,7 @@
       </div>
 
       <!-- phone section -->
-      <div class="phone_container">
+      <div class="phone_container js_scroll fade-in-bottom">
         <svg
           class="phone_svg"
           width="563"
@@ -198,6 +198,7 @@
           xmlns:xlink="http://www.w3.org/1999/xlink"
         >
           <rect
+            class="js_scroll slide-left"
             x="21"
             y="82"
             width="354"
@@ -205,6 +206,7 @@
             fill="url(#pattern0_138_2)"
           />
           <ellipse
+            class="js_scroll ball1"
             cx="457.5"
             cy="68"
             rx="67.5"
@@ -213,6 +215,7 @@
             fill-opacity="0.47"
           />
           <ellipse
+            class="js_scroll ball2"
             cx="34"
             cy="378.5"
             rx="34"
@@ -221,6 +224,7 @@
             fill-opacity="0.67"
           />
           <ellipse
+            class="js_scroll ball3"
             cx="83"
             cy="61.5"
             rx="62"
@@ -228,7 +232,13 @@
             fill="#5CD568"
             fill-opacity="0.24"
           />
-          <rect x="190" width="373" height="626" fill="url(#pattern1_138_2)" />
+          <rect
+            class="js_scroll slide-left"
+            x="190"
+            width="373"
+            height="626"
+            fill="url(#pattern1_138_2)"
+          />
           <defs>
             <pattern
               id="pattern0_138_2"
@@ -268,15 +278,15 @@
         </svg>
         <hr />
         <div class="phone_text">
-          <h2>Lorem ipsum</h2>
+          <h2 class="js_scroll slide-right-1">Lorem ipsum</h2>
           <ul>
-            <li>itemlist 1</li>
-            <li>itemlist 2</li>
-            <li>itemlist 3</li>
-            <li>itemlist 4</li>
-            <li>itemlist 5</li>
+            <li class="js_scroll slide-right-2">itemlist 1</li>
+            <li class="js_scroll slide-right-3">itemlist 2</li>
+            <li class="js_scroll slide-right-4">itemlist 3</li>
+            <li class="js_scroll slide-right-5">itemlist 4</li>
+            <li class="js_scroll slide-right-6">itemlist 5</li>
           </ul>
-          <a class="buttons" href="#">Button</a>
+          <a class="buttons js_scroll slide-right-4" href="#">Button</a>
         </div>
       </div>
 
@@ -291,7 +301,7 @@
         <!-- Content cards main container -->
         <div class="cards_container">
           <!-- card - 1 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
@@ -300,7 +310,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
           <!-- card - 2 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
@@ -309,7 +319,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
           <!-- card - 3 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
@@ -318,7 +328,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
           <!-- card - 4 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
@@ -327,7 +337,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
           <!-- card - 5 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
@@ -336,7 +346,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
           <!-- card - 6 -->
-          <article class="card">
+          <article class="card js_scroll .fade-in">
             <h3>Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
