--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Heading section -->
     <header>
       <!-- navbar -->
-      <nav>
+      <nav id="navbar">
         <!-- logo -->
         <a class="nav_logo" href="#">Boilerplate</a>
         <!-- Navigation links -->
@@ -33,11 +33,14 @@
       <div class="hero">
         <img class="hero_rocks" src="assets/rocks.png" alt="rocks" />
         <img class="hero_planet" src="assets/planet.png" alt="planet" />
-        <img class="hero_bg " src="assets/bg.png" alt="background space" />
+        <img class="hero_bg" src="assets/bg.png" alt="background space" />
         <div class="hero_filter"></div>
         <!-- Main title and description -->
         <div class="hero_text">
-          <h1>Título del sitio</h1>
+          <div>
+            <h1>Título del sitio</h1>
+            <p id="hero_subtitle">Subtitulo <span class="auto-typer"></span></p>
+          </div>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
             sin itur decen otalisLorem
@@ -53,7 +56,7 @@
       <!-- Icons cards section -->
       <div class="section_products">
         <!-- First card -->
-        <article class="product js_scroll .fade-in">
+        <article class="product js_scroll">
           <!-- Animated wheel -->
           <div class="product_icon_cont">
             <i class="fa-solid fa-lightbulb"></i>
@@ -98,7 +101,7 @@
         <div class="product_separator"></div>
 
         <!-- Second card -->
-        <article class="product">
+        <article class="product js_scroll">
           <!-- Animated wheel -->
           <div class="product_icon_cont">
             <i class="fa-solid fa-chart-simple"></i>
@@ -143,7 +146,7 @@
         <div class="product_separator"></div>
 
         <!-- Third card -->
-        <article class="product">
+        <article class="product js_scroll">
           <!-- Animated wheel -->
           <div class="product_icon_cont">
             <i class="fa-solid fa-lightbulb"></i>
@@ -379,6 +382,7 @@
     </footer>
 
     <!-- Scripts and prefixer -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="scripts/prefixer.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
