subtitle js script

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="hero_text">
           <div>
             <h1>Título del sitio</h1>
-            <p id="hero_subtitle">Subtitulo <span class="auto-typer"></span></p>
+            <p id="hero_subtitle">Lorem ipsum <span class="auto-typer"></span></p>
           </div>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
