--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="no olvidarse de completar" />
-    <meta name="keywords" content="no olvidarse de completar" />
+    <meta
+      name="description"
+      content="landing page template with parallax and animations on scroll"
+    />
+    <meta
+      name="keywords"
+      content="landing page, template, boilerplate, web, development, web development, html, css, javascript, web design, programming, programming languages, parallax, animations, scrolling, scroll"
+    />
     <!-- Fontawesome icons -->
     <script
       src="https://kit.fontawesome.com/a3cedbb514.js"
@@ -41,7 +47,9 @@
         <div class="hero_text">
           <div>
             <h1>Título del sitio</h1>
-            <p id="hero_subtitle">Lorem ipsum <span class="auto-typer"></span></p>
+            <p id="hero_subtitle">
+              Lorem ipsum <span class="auto-typer"></span>
+            </p>
           </div>
           <p>
             Lorem ipsum dolor amet sin itur decen otalis Lorem ipsum dolor amet
