responsive and hamburger menu

--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
         <!-- logo -->
         <a class="nav_logo" href="#">Boilerplate</a>
         <!-- Navigation links -->
-        <ul>
+        <ul class="nav_links">
           <li><a class="nav_link_active" href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a class="nav_button buttons" href="#">Button</a></li>
         </ul>
+        <div class="hamburger_menu_button">
+          <span class="hamburger_menu_icon"></span>
+          <span class="hamburger_menu_icon"></span>
+          <span class="hamburger_menu_icon"></span>
+        </div>
       </nav>
       <!-- Hero image container -->
       <div class="hero">
@@ -202,6 +207,7 @@
       <!-- phone section -->
       <div class="phone_container" data-aos="fade-up" data-aos-duration="2000">
         <div
+          class="phone_svg_container"
           data-aos="fade-right"
           data-aos-duration="1000"
           data-aos-delay="300"
