hamburger menu togle & all responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,9 +32,11 @@
         <a class="nav_logo" href="#">Boilerplate</a>
         <!-- Navigation links -->
         <ul class="nav_links">
-          <li><a class="nav_link_active" href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a class="nav_button buttons" href="#">Button</a></li>
+          <li class="nav_link"><a class="nav_link_active" href="#">Home</a></li>
+          <li class="nav_link"><a href="#">Products</a></li>
+          <li class="nav_link">
+            <a class="nav_button buttons" href="#">Button</a>
+          </li>
         </ul>
         <div class="hamburger_menu_button">
           <span class="hamburger_menu_icon"></span>
