--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a class="buttons" href="#"
+            <a href="#"
               ><i class="fa-solid fa-arrow-right-long"></i
             ></a>
           </article>
