--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="landing page template with parallax and animations on scroll"
-    >
+    />
     <meta
       name="keywords"
       content="landing page, template, boilerplate, web, development, web development, html, css, javascript, web design, programming, programming languages, parallax, animations, scrolling, scroll"
-    >
+    />
     <!-- Fontawesome icons -->
     <script
       src="https://kit.fontawesome.com/a3cedbb514.js"
       crossorigin="anonymous"
     ></script>
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css" >
+    <link rel="stylesheet" href="css/styles.css" />
     <!-- CDN Animations AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" >
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Title -->
     <title>Boilerplate</title>
   </head>
@@ -46,9 +46,9 @@
       </nav>
       <!-- Hero image container -->
       <div class="hero">
-        <img class="hero_rocks" src="assets/rocks.png" alt="rocks" >
-        <img class="hero_planet" src="assets/planet.png" alt="planet" >
-        <img class="hero_bg" src="assets/bg.png" alt="background space" >
+        <img class="hero_rocks" src="assets/rocks.png" alt="rocks" />
+        <img class="hero_planet" src="assets/planet.png" alt="planet" />
+        <img class="hero_bg" src="assets/bg.png" alt="background space" />
         <div class="hero_filter"></div>
         <!-- Main title and description -->
         <div class="hero_text">
@@ -298,7 +298,7 @@
             </defs>
           </svg>
         </div>
-        <hr >
+        <hr />
         <div class="phone_text">
           <h2 data-aos="fade-left" data-aos-duration="1000">Lorem ipsum</h2>
           <ul>
@@ -342,6 +342,7 @@
             data-aos="fade-left"
             data-aos-duration="1500"
             data-aos-delay="500"
+            class="buttons"
             href="#"
             >Button</a
           >
@@ -352,7 +353,7 @@
       <section class="section_cards">
         <!-- Section title -->
         <h2>
-          Lorem ipsum dolar amat segueli<br >
+          Lorem ipsum dolar amat segueli<br />
           sin acuarium non ballenus
         </h2>
 
@@ -440,9 +441,7 @@
               Lorem ipsum dolor sit amet consecte Lorem ipsum dolor sit amet
               con.
             </p>
-            <a href="#"
-              ><i class="fa-solid fa-arrow-right-long"></i
-            ></a>
+            <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
           </article>
         </div>
       </section>
